# laederhub

./: .env.example  .gitignore  README.md  TASKS.md  firestore.rules  package-lock.json  pyproject.toml
backend/: pyproject.toml
backend/app/: main.py
backend/app/routes/: analytics.py  auth.py  connects.py  intake.py
backend/app/services/core/: security.py
backend/app/services/llm/: orchestrator.py
backend/app/services/mcp/: client.py
backend/app/services/store/: firestore.py
docs/: backend.json  blueprint.md
frontend/: middleware.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/hub/: layout.tsx  page.tsx
frontend/app/login/: page.tsx  sign-in-buttons.tsx
frontend/app/signup/: page.tsx
frontend/app/wip/: page.tsx
frontend/components/: Providers.tsx
frontend/components/hub/: ChatPanel.tsx  Header.tsx  SourceIndicator.tsx
frontend/components/landing/: About.tsx  Contact.tsx  Footer.tsx  Services.tsx
frontend/firebase/: config.ts
frontend/hooks/: useApi.ts
frontend/lib/: auth.ts
frontend/types/: next-auth.d.ts
scripts/: dev_bootstrap.sh
services/: __init__.py
services/api/: __init__.py  app.py
services/api/core/: config.py  logging.py
services/api/data/: bigquery_schemas.py  loaders.py
shared/: pyproject.toml
src/: middleware.ts
src/app/: globals.css  layout.tsx
src/components/: Providers.tsx
src/context/: AuthContext.tsx
src/hooks/: useApi.ts
src/lib/: firebase.ts  placeholder-images.json
src/types/: index.ts
tests/unit/: test_basic.py
(+19 files in other folders)
